--- a/smartorange/app/scss/components/_popup.scss
+++ b/smartorange/app/scss/components/_popup.scss
@@ -23,16 +23,23 @@ body {
 .form__btn {
   display: inline-block;
   width: 35%;
-  height: 4.5rem;
   color: #314671;
   border-radius: .5rem;
-  padding: 2.5% 0;
+  padding: 4.5% 0;
   font-weight: bold;
   font-size: 1.4rem;
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
   transition: all .2s;
+
+  @media screen and (max-width: 780px) {
+    width: 45%;
+  }
+
+  @media screen and (max-width: 480px) {
+    font-size: 1.2rem;
+  }
 
   &:hover {
     transform: translateY(-0.4rem);
@@ -67,6 +74,11 @@ body {
   padding: 6rem;
   background: #314671;
   color: $white;
+
+  @media screen and (max-width: 780px) {
+    width: 70%;
+    padding: 3rem;
+  }
 }
 
 .close-popup {
@@ -77,6 +89,11 @@ body {
   height: 2.3rem;
   cursor: pointer;
 
+  @media screen and (max-width: 780px) {
+    width: 2.1rem;
+    height: 2.1rem;
+  }
+
   &::before,
   &::after {
     content: "";
@@ -86,6 +103,10 @@ body {
     width: 31px;
     top: 11px;
     left: -4px;
+
+    @media screen and (max-width: 780px) {
+      width: 100%;
+    }
   }
   &::before {
     transform: rotate(-45deg);
