--- a/smartorange/app/scss/components/_typography.scss
+++ b/smartorange/app/scss/components/_typography.scss
@@ -34,6 +34,10 @@
   color: $white;
   text-transform: capitalize;
 
+  @media screen and (max-width: 780px) {
+    font-size: 4.8rem;
+  }
+
   @media screen and (max-width: 480px) {
     font-size: 3.4rem;
   }
@@ -81,6 +85,11 @@
     font-size: 1.8rem;
     margin-top: 1rem;
     color: $white;
+
+    @media screen and (max-width: 780px) {
+      font-size: 1.6rem;
+      margin-top: .8rem;
+    }
   }
 }
 
@@ -89,6 +98,10 @@
   width: 66%;
   margin: 0 auto;
   text-align: center;
+
+  @media screen and (max-width: 780px) {
+    font-size: 1.8rem;
+  }
 
   @media screen and (max-width: 480px) {
     font-size: 1.8rem;
